# bevy_circle_clicker

./: Cargo.toml  README.md  README.norg  TODO.norg
src/: config.rs  editor.rs  main.rs  utils.rs
src/game/: camera.rs  click.rs  config.rs  cursor.rs  hitcircle.rs  mod.rs  score.rs
src/net/: client.rs  host.rs  mod.rs
src/ui/: mod.rs  score.rs
