[package]
name = "bevy_circle_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["transport"]
serde = ["renet/serde"]
transport = ["bevy_renet/transport"]

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "file_watcher"] }
bevy_framepace = "0.15.0"

renet = { version = "0.0.15", features = ["bevy"] }
bevy_renet = { version = "0.0.11", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

rand = "0.8.5"

winit = "0.29"
image = "0.24"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
